--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
 
         <activity android:name=".NotificationPreferencesActivity"/>
 
-
+        <service android:name=".JobSchedulerService"
+                 android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
